# hec-dss-python

./: .flake8  .gitattributes  .gitignore  HecDss.py  LICENSE.md  LOGGING.md  Readme.md  Readme2.md  bak_build.py  catalog.py  dateconverter.py  dsspath.py  hec_dss.py  hec_dss_native.py  missing_data.dss  pyproject.toml  record_type.py  requirements.txt  sample7.dss  setup.cfg  tests.py
.github/ISSUE_TEMPLATE/: bug-report---feature-request.md
.github/workflows/: publish-to-test-pypi.yml  test.yml  update-version.yml
attic/: HecDss.py
docs/: hecdss.html  index.html  search.js
docs/hecdss/: array_container.html  catalog.html  cwms_utility.html  dateconverter.html  download_hecdss.html  dss_type.html  dsspath.html  gridded_data.html  hecdss.html  irregular_timeseries.html  native.html  paired_data.html  record_type.html  regular_timeseries.html
examples/rainfall_parser/: DssWriter.py  rainfall_sim.csv  rainfall_sim_parser.py
src/hecdss/: PairedData.py  __init__.py  array_container.py  catalog.py  cwms_utility.py  dateconverter.py  download_hecdss.py  dss_type.py  dsspath.py  gridded_data.py  hec_dss.py  hec_dss_native-readme.md  hec_dss_native.py  hecdss.py  irregular_timeseries.py  location_info.py  logging_config.py  native.py  paired_data.py  record_type.py  regular_timeseries.py  text.py  timeseries.py
src/hecdsspython/: __init__.py  download_hecdss.py  hec_dss.py
tests/: file_manager.py  record_type_test.py  test_array.py  test_basics.py  test_dss_type.py  test_dsspath.py  test_file_manager.py  test_gridded_data.py  test_irregular_timeseries.py  test_location_info.py  test_logging.py  test_pairedData.py  test_paired_data.py  test_regular_timeseries.py  test_text.py  workshop.py
tests/data/: Depth_Area_01.dss  R703F3-PF_v7.dss  TestAlt1-dss-v7.dss  grid-example.dss  missing_data.dss  sample7.dss
