[tool.poetry]
name = "hec-dss-python"
version = "0.1.29"
description = "Python wrapper for the HEC-DSS file database C library."
authors = ["Hydrologic Engineering Center"]
license = "MIT"
readme = "Readme.md"
packages = [{ include = "hecdss", from = "src" }]
# include = [{ path = "lib", format = ["sdist", "wheel"] }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
# Python Syntax highlighter, assume
# Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = { extras = ["toml"], version = ">=6.2" }
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
# furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=7"
pyupgrade = ">=2.29.1"
safety = ">=2.0.0"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
# xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = { version = ">=0.16.1" }

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["hecdsspython", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = 'INFO'
testpaths = ["tests"]
pythonpath = "./src"
