[metadata]
name = hecdss
version = 0.1.10
author = Hydrologic Engineering Center
author_email =hec.dss@usace.army.mil
description = Python wrapper for the HEC-DSS file database C library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HydrologicEngineeringCenter/hec-dss-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
* = *.dll